--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
+    "sqlite": "^4.0.12",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
